    [Anthony]
  * Added preliminary cloning support. [Anthony]
  * Link to submitter's web page, patch from Matt Kraai. [Josip]
  * The autoconfig thing in the description is gone, closes: #124537.
  * Fix viewing archived bugs by source package, closes: #121082, #146484.
    [Colin]
  * Depends: libmailtools-perl rather than mailtools, closes: #113028.
  * Fix a few typos, closes: #146745, #152751.
  * Various other things, not worth mentioning here.

 -- Josip Rodin <jrodin@jagor.srce.hr>  UNRELEASED

debbugs (2.3-4) unstable; urgency=low

  * Added a check for unwanted characters in the part of request passed on
    to sendlynxdoc that gets passed to shell. [Josip]
  * Applied Rob Browning's patches to remove more Debian-only stuff,
    closes: #80077. [Josip]
  * Fixed the nextnumber misplacement (it should be in spool dir, not config
    dir), and added a note about running debbugsconfig after changes to
    config file, thanks to Rob for the hints. [Josip]
  * Changed Maintainer: to point to debian-debbugs. Added myself to
    Uploaders:. [Josip]
  * Fixed Lintian errors: file-in-etc-not-marked-as-conffile (except
    for lynx-cfg which is a gross hack anyway),
    virtual-package-depends-without-real-package-depends,
    debian-changelog-file-contains-user-emacs-settings.

 -- Josip Rodin <jrodin@jagor.srce.hr>  Thu,  7 Feb 2002 17:30:17 +0100

debbugs (2.3-3) unstable; urgency=low

  * Fixed examples installation, debbugsconfig should actually work now,
    closes: #77126. [Josip]
  * Removed all traces of the package after purging, in postrm. [Josip]
  * Added pkgindex.cgi, package/maintainer/submitter indices. [Anthony]
  * Moved readparse to common.pl, since it's, well, common to all the cgi
    stuff. Other fixes in common.pl. [Anthony]
  * Moved some of the pkgreport.cgi logic from common.pl into pkgreport.cgi.
    [Anthony]
  * Random typo fixes in the CGIs. [Anthony]
  * Made the CGI scripts use the common.pl from their directory and not